--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.8-SNAPSHOT'
+	id 'fabric-loom' version '0.10-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -11,7 +11,7 @@ version = project.mod_version
 group = project.maven_group
 
 repositories {
-	maven { url = "https://maven.gegy.dev" }
+	//maven { url = "https://maven.gegy.dev" }
 }
 
 minecraft {
@@ -27,9 +27,9 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	modRuntime ("supercoder79:databreaker:0.2.7") {
-		exclude module : "fabric-loader"
-	}
+//	modRuntime ("supercoder79:databreaker:0.2.7") {
+//		exclude module : "fabric-loader"
+//	}
 
 	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
 	// You may need to force-disable transitiveness on them.
