--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.17-pre4
-yarn_mappings=1.17-pre4+build.1
-loader_version=0.11.3
+minecraft_version=1.18
+yarn_mappings=1.18+build.1
+loader_version=0.12.8
 
 #Fabric api
-fabric_version=0.34.8+1.17
+fabric_version=0.43.1+1.18
 
 # Mod Properties
 mod_version = 0.3.3
